--- a/style.css
+++ b/style.css
@@ -138,3 +138,27 @@ button{
     color: red;
     display: none;
 }
+
+
+.rendeles{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    align-self: center;
+    margin-top: 10em;
+    width: 100%;
+    background-color: white;
+    text-align: center;
+    z-index: 10;
+    height: auto;
+    opacity: 80%;
+    color: green;
+    border: 1px solid black;
+}
+
+.rendeles p {
+    color: black;
+    font-size: x-large;
+    font-weight: bolder;
+}
