--- a/style.css
+++ b/style.css
@@ -141,7 +141,7 @@ button{
 
 
 .rendeles{
-    display: flex;
+    display: none;
     flex-direction: column;
     justify-content: center;
     align-items: center;
