--- a/style.css
+++ b/style.css
@@ -162,3 +162,12 @@ button{
     font-size: x-large;
     font-weight: bolder;
 }
+
+ul li{
+    color: blue;
+    font-size: x-large;
+}
+
+span{
+    padding: 0px 5px;
+}
