--- a/style.css
+++ b/style.css
@@ -171,3 +171,15 @@ ul li{
 span{
     padding: 0px 5px;
 }
+
+
+@media (max-width: 880px) {
+    
+
+    .rendeles {
+        display: none !important;
+
+    }
+
+    
+}
